# Camera-shopee

./: .gitignore  README.md  packrecorder.spec  packrecorder_console.spec  packrecorder_rth_dlls.py  pyproject.toml  run_packrecorder.bat  run_packrecorder_console.bat  run_packrecorder_no_mp.bat
docs/: architecture-and-flow.md  how-to-index-this-project.md  software-operation-mindmap.md
installer/: PackRecorder.iss
scripts/: BUILD_PORTABLE.txt  build_installer.bat  build_portable.bat  build_portable.ps1  create_startup_shortcut.py  generate_winson_mode_qrcodes.py  github-first-push.ps1
tests/: test_camera_error_messages.py  test_capture_backoff.py  test_config.py  test_dashboard_metrics.py  test_duplicate.py  test_feedback_sound.py  test_ffmpeg_locate.py  test_ffmpeg_pipe_recorder.py  test_frame_ring.py  test_heartbeat_consumer.py  test_hid_environment_smoke.py  test_hid_pos_scan_worker.py  test_hid_pos_setup_wizard.py  test_hid_report_parse.py  test_hid_scanner_discovery.py  test_ipc_health.py  test_main_window_preview_tab.py  test_mini_overlay_line_styles.py  test_onboarding_banner_text.py  test_order_input.py  test_order_state.py  test_order_state_cooldown.py  test_paths.py  test_pip_composite.py  test_process_priority.py  test_quay_menu_policy.py  test_record_resolution.py  test_record_roi.py  test_recording_index.py  test_recording_search_dialog.py  test_retention.py  test_scan_flow_simulation.py  test_scan_worker_decode.py  test_serial_ports.py  test_serial_scan_backoff.py  test_serial_scan_queue.py  test_session_log.py  test_setup_wizard_device_filtering.py  (+12 more)
(+94 files in other folders)
